# debian-patches

./: .release-timestamp  .tag  ChangeLog  Makefile.am  NEWS  README.md  README.rst  REUSE.toml  check-patch-files.sh  configure.ac  dependencies.yaml  gedit-plugins.doap  gnome-terminal  libvte-2.91-0  meson.build  meson_options.txt  run_dates.txt  run_dates_12.txt  run_dates_13.txt  version-check.sh
.pc/: applied-patches
data/: meson.build  org.gnome.Terminal.desktop.in
data/language-specs/: check-all-languages.sh  check-language.sh  language-specs.pot  meson.build  update-pot.sh
debian-12/: gnome-terminal  libvte-2.91-0
debian-13/: gedit  gnome-terminal  libfuse3-4  libgedit-gtksourceview-300-3  (+6 more)
plugins/: meson.build
plugins/bookmarks/: gedit-bookmarks.metainfo.xml.in  meson.build
plugins/bracketcompletion/: gedit-bracketcompletion.metainfo.xml.in  meson.build
plugins/charmap/: gedit-charmap.metainfo.xml.in  meson.build
plugins/codecomment/: gedit-codecomment.metainfo.xml.in  meson.build
plugins/colorpicker/: gedit-colorpicker.metainfo.xml.in  meson.build
plugins/colorschemer/: gedit-colorschemer.metainfo.xml.in  meson.build
plugins/drawspaces/: gedit-drawspaces.metainfo.xml.in  meson.build
plugins/git/: gedit-git.metainfo.xml.in  meson.build
plugins/joinlines/: gedit-joinlines.metainfo.xml.in  meson.build
plugins/multiedit/: gedit-multiedit.metainfo.xml.in  meson.build
plugins/sessionsaver/sessionsaver/: windowactivable.py
plugins/smartspaces/: gedit-smartspaces.metainfo.xml.in  meson.build
plugins/synctex/: gedit-synctex.metainfo.xml.in  meson.build
plugins/synctex/synctex/: synctex.py
plugins/terminal/: gedit-terminal.metainfo.xml.in  meson.build  terminal.py
plugins/textsize/: gedit-textsize.metainfo.xml.in  meson.build
plugins/wordcompletion/: gedit-wordcompletion.metainfo.xml.in  meson.build
(+405 files in other folders)
